Bug 1736128: Ignore APZ detection in Windows touch event sent for window buttons r=emk

Since we don't handle WM_NCPOINTER* touch events, Windows resends them as WM_NCLBUTTON* events but leaves the special touch-indicators set in thread extra data (::GetMessageExtraInfo).  This extra data causes our event to be ignored as a "touch-generated mouse event" that isn't part of an APZ drag.  This patch skips that check for these specific window-button mouse events.

Differential Revision: https://phabricator.services.mozilla.com/D128771